--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
 
                 <!-- 快照和重试按钮 -->
                 <img id="snapshot" class="snapshot-image" alt="用户快照">
-                <button id="retryButton" class="retry-button">重 试</button>
+                <button id="retryButton" class="retry-button">Try Again</button>
             </div>
 
             <div id="ad-box" class="info-box ad-box">
