--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Personalized Content Generation</title>
+    <title>AI 个性化内容生成</title>
     <link rel="stylesheet" href="style.css">
-    <!-- Load face-api.js from CDN -->
+    <!-- 使用 CDN 加载 face-api.js -->
     <script src="https://cdn.jsdelivr.net/npm/face-api.js@0.22.2/dist/face-api.min.js"></script>
     <script src="script.js"></script>
 </head>
@@ -13,16 +13,16 @@
 
     <div class="container">
         
-        <!-- Agreement Stage -->
+        <!-- 同意阶段 -->
         <div id="agree-stage" class="stage">
             <div class="agree-card">
-                <h1>Welcome</h1>
-                <p>This project analyzes facial features in real-time via your camera to generate personalized content. Your image is used only for instant calculation and is not stored or uploaded. Please agree to continue.</p>
-                <button id="agreeButton" class="agree-button">I Agree</button>
+                <h1>欢迎体验</h1>
+                <p>本项目将通过摄像头进行瞬时面部特征分析，以生成个性化内容。您的图像仅用于实时计算，不会被存储或上传。请同意以继续。</p>
+                <button id="agreeButton" class="agree-button">我同意</button>
             </div>
         </div>
 
-        <!-- Main Interaction Stage -->
+        <!-- 主交互阶段 -->
         <div id="main-stage" class="stage">
             <div class="left-panel">
                 <div id="video-container">
@@ -31,7 +31,7 @@
                     <div id="countdown-overlay">
                         <span id="countdown-text">3</span>
                     </div>
-                    <button id="retryButton" class="retry-button">Retry</button>
+                    <button id="retryButton" class="retry-button">重 试</button>
                 </div>
                 <div id="ad-box" class="info-box ad-box">
                     ---
@@ -49,4 +49,3 @@
 
 </body>
 </html>
-
